"""
BUILD.bazel for @tummycrypt/tinyland-user-resolution.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-user-resolution && pnpm build
  Monorepo:   bazel build //packages/tinyland-user-resolution/...
"""

load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

npm_link_all_packages(name = "node_modules")


ts_project(
    name = "tinyland_user_resolution",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    out_dir = "dist",
    root_dir = "src",
    validate = False,
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        ":node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_user_resolution",
    ],
    package = "@tummycrypt/tinyland-user-resolution",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

vitest_bin.vitest_test(
    name = "test",
    data = [
        ":node_modules",
        "tsconfig.json",
        "//packages:tsconfig.base.json",
        ":node_modules/vitest",
        "vitest.config.ts",
    ] + glob(["src/**/*.ts"]) + glob(["tests/**/*.test.ts", "tests/**/*.ts"]),
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
